Légère modification de style

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <div class="container">
 
-        <header class="header">
+        <header class="header centre">
             <h1>Amir Hilaly</h1>
-            <p id="soustitre">Étudiant ingénieur - Cybersécurité</p>
+            <p id="soustitre">Étudiant bachelier - Cybersécurité</p>
         </header>
 
         <div class="bloc">
@@ -35,7 +35,7 @@
         </div>
 
         <section class="bloc">
-            <h2>Expérience</h2>
+            <h2>Expériences</h2>
             <p>
             <strong class="exp-titre">Macif — Stage (2025)</strong><br>
                 Développement de scripts Python pour l’automatisation de tests web
