--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
             <h2>Compétences</h2>
             <ul>
                 <li>Sécurité des applications web</li>
+                <li>Outils de pentest web (Burp Suite, dirb, sqlmap)</li>
                 <li>Administration systèmes & parcs informatiques</li>
-                <li>Linux (utilisation et administration)</li>
+                <li>Linux (utilisation et administration)(Rocky, Arch, Kali, Debian, Fedora, Ubuntu)</li>
                 <li>Programmation & scripting : Python, JavaScript, Bash, SQL</li>
                 <li>Gestion de bases de données</li>
+                <li>Outils de Virtualisation (VirtualBox, HyperV)</li>
             </ul>
         </div>
 
@@ -50,7 +52,7 @@
                 
                 <br><br>
 
-                CTFs: Cyber Apocalypse, HackDay (2026), CyberNight (2025), CyberNight (2026), L3akCTF, Midnight Flag...
+                CTFs: Cyber Apocalypse <strong>Top 464/8129</strong>, HackDay (2026), CyberNight (2025), CyberNight (2026), L3akCTF, Midnight Flag...
             </p>
         </section>
 
