--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>Compétences</h2>
             <ul>
                 <li>Sécurité des applications web</li>
-                <li>Outils de pentest web (Burp Suite, dirb, sqlmap)</li>
+                <li>Outils de pentest (Burp Suite, Dirb, Sqlmap, Ghidra, Gobuster, WFuzz, Hydra, Hashcat, Johntheripper, Wireshark)</li>
                 <li>Administration systèmes & parcs informatiques</li>
                 <li>Linux (utilisation et administration)(Rocky, Arch, Kali, Debian, Fedora, Ubuntu)</li>
                 <li>Programmation & scripting : Python, JavaScript, Bash, SQL</li>
