--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="bloc">
             <h2>Expériences</h2>
             <p>
-            <strong class="exp-titre">Macif — Stage (2025)</strong><br>
+            <strong class="exp-titre">MACIF FINANCE EPARGNE — Stage (2025)</strong><br>
                 Développement de scripts Python pour l’automatisation de tests web
                 et l’amélioration des processus de validation applicative.
             </p>
